--- a/AegisCoreWeb/Views/Home/Index.cshtml
+++ b/AegisCoreWeb/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                         <i class="bi bi-code-slash me-2"></i>Ver API
                     </a>
                 </div>
-                <p class="text-muted mt-3">
+                <p class="mt-3">
                     <i class="bi bi-check-circle text-success me-1"></i>100 requisições/dia grátis
                     <i class="bi bi-check-circle text-success ms-3 me-1"></i>Sem cartão de crédito
                 </p>
