--- a/AegisCoreWeb/Views/Home/Documentation.cshtml
+++ b/AegisCoreWeb/Views/Home/Documentation.cshtml
@@ -1,6 +1,7 @@
+@inject AegisCoreWeb.AppSettings AppSettings
 @{
     ViewData["Title"] = "Documentação";
-    var apiUrl = Environment.GetEnvironmentVariable("API_URL") ?? "http://localhost:5050";
+    var apiUrl = AppSettings.ApiUrl;
 }
 
 <div class="container py-5">
