--- a/AegisCoreWeb/Views/Home/Index.cshtml
+++ b/AegisCoreWeb/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject AegisCoreWeb.AppSettings AppSettings
 @{
-    var apiUrl = AppSettings.ApiUrl;
+    var apiUrl = AppSettings.ApiUrl?.TrimEnd('/') ?? "http://localhost:5050";
 }
 @{
     ViewData["Title"] = "Moderação de Conteúdo com IA";
@@ -22,7 +22,7 @@
                     <a asp-controller="Account" asp-action="Register" class="btn btn-primary btn-lg">
                         <i class="bi bi-rocket-takeoff me-2"></i>Começar Grátis
                     </a>
-                    <a href="@apiUrl/swagger" class="btn btn-outline-light btn-lg" target="_blank">
+                    <a href="@(apiUrl)/swagger" class="btn btn-outline-light btn-lg" target="_blank">
                         <i class="bi bi-code-slash me-2"></i>Ver API
                     </a>
                 </div>
